--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
   </div>
 
 <script type="module">
-/* ---------------- Firebase (v9 modular) ---------------- */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getFirestore, doc, setDoc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
@@ -86,279 +85,134 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-/* ---------------- Shared State ---------------- */
-let monthStore = {}, current = new Date(), hot, directoryHot;
-let lastSel = null, clipboardMeta = null;
-const COLS_PER_DAY = 2, DAYS_PER_WEEK = 7, TOTAL_COLS = DAYS_PER_WEEK * COLS_PER_DAY;
-let bodyRows = [];
+/* ---------- Shared State ---------- */
+let monthStore={}, current=new Date(), hot, directoryHot;
+let lastSel=null, clipboardMeta=null;
+const COLS_PER_DAY=2, DAYS_PER_WEEK=7, TOTAL_COLS=DAYS_PER_WEEK*COLS_PER_DAY;
+let bodyRows=[];
 
-/* ---------------- Firebase Helpers ---------------- */
-async function saveMonth(key) {
-  const state = monthStore[key];
-  if (!state) return;
-  await setDoc(doc(db, "months", key), {
-    data: state.data,
-    bodyRows: state.bodyRows,
-    meta: state.meta
-  });
+/* ---------- Firebase helpers ---------- */
+async function saveMonth(key){
+  const state=monthStore[key]; if(!state) return;
+  await setDoc(doc(db,"months",key),{data:state.data,bodyRows:state.bodyRows,meta:state.meta});
 }
-async function loadMonth(y, m) {
-  const key = monthKey(y, m);
-  const snap = await getDoc(doc(db, "months", key));
-  if (snap.exists()) {
-    const d = snap.data();
-    monthStore[key] = {
-      data: d.data,
-      bodyRows: d.bodyRows,
-      meta: d.meta,
-      calendar: buildWeekMatrix(y, m, numWeeks(y, m)),
-      shiftLog: [],
-      summary: [],
-      summaryStudy: [],
-      summarySite: []
-    };
+async function loadMonth(y,m){
+  const key=monthKey(y,m);
+  const snap=await getDoc(doc(db,"months",key));
+  if(snap.exists()){
+    const d=snap.data();
+    monthStore[key].data=d.data;
+    monthStore[key].bodyRows=d.bodyRows;
+    monthStore[key].meta=d.meta;
   }
 }
-function subscribeToMonth(y, m) {
-  const key = monthKey(y, m);
-  onSnapshot(doc(db, "months", key), (snap) => {
-    if (snap.exists() && monthStore[key]) {
-      const d = snap.data();
-      monthStore[key].data = d.data;
-      monthStore[key].bodyRows = d.bodyRows;
-      monthStore[key].meta = d.meta;
-      if (hot) {
-        hot.loadData(monthStore[key].data);
-        hot.render();
-      }
+function subscribeToMonth(y,m){
+  const key=monthKey(y,m);
+  onSnapshot(doc(db,"months",key),(snap)=>{
+    if(snap.exists() && monthStore[key]){
+      const d=snap.data();
+      monthStore[key].data=d.data;
+      monthStore[key].bodyRows=d.bodyRows;
+      monthStore[key].meta=d.meta;
+      if(hot){ hot.loadData(monthStore[key].data); hot.render(); }
     }
   });
 }
 
-/* ---------------- Page Switching ---------------- */
+/* ---------- Page Switching ---------- */
 function showPage(id){
   document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
   document.getElementById(id).classList.add('active');
   if(id==='reportsPage') refreshMonthSelect();
 }
-function monthKey(y,m){ return `${y}-${String(m+1).padStart(2,'0')}`; }
+window.showPage=showPage;
+function monthKey(y,m){return `${y}-${String(m+1).padStart(2,'0')}`;}
 
-/* ---------------- Calendar Helpers ---------------- */
-function startOfCalendar(year, monthIdx){
-  const first = new Date(year, monthIdx, 1);
-  const dow = (first.getDay()+6)%7; // Monday=0
-  const d = new Date(first);
-  d.setDate(first.getDate() - dow);
-  return d;
-}
-function numWeeks(year, monthIdx){
-  const start = startOfCalendar(year, monthIdx);
-  const end = new Date(year, monthIdx+1, 0);
-  const diff = Math.ceil((end - start) / 86400000) + 1;
-  return Math.ceil(diff / 7);
-}
-function buildWeekMatrix(year, monthIdx, weeks){
-  const start = startOfCalendar(year, monthIdx);
-  const matrix = [];
-  for(let w=0; w<weeks; w++){
-    const row = [];
-    for(let d=0; d<DAYS_PER_WEEK; d++){
-      const cell = new Date(start);
-      cell.setDate(start.getDate()+w*7+d);
-      row.push({ date:new Date(cell), inMonth: cell.getMonth()===monthIdx });
-    }
-    matrix.push(row);
-  }
-  return matrix;
+/* ---------- Calendar helpers ---------- */
+function startOfCalendar(year,monthIdx){const first=new Date(year,monthIdx,1);const dow=(first.getDay()+6)%7;const d=new Date(first);d.setDate(first.getDate()-dow);return d;}
+function numWeeks(year,monthIdx){const start=startOfCalendar(year,monthIdx);const end=new Date(year,monthIdx+1,0);const diff=Math.ceil((end-start)/86400000)+1;return Math.ceil(diff/7);}
+function buildWeekMatrix(year,monthIdx,weeks){const start=startOfCalendar(year,monthIdx);const matrix=[];for(let w=0;w<weeks;w++){const row=[];for(let d=0;d<DAYS_PER_WEEK;d++){const cell=new Date(start);cell.setDate(start.getDate()+w*7+d);row.push({date:new Date(cell),inMonth:cell.getMonth()===monthIdx});}matrix.push(row);}return matrix;}
+
+/* ---------- Renderer ---------- */
+function colorRenderer(instance,td,row,col,prop,value,cellProps){
+  Handsontable.renderers.TextRenderer.apply(this,arguments);
+  const key=monthKey(current.getFullYear(),current.getMonth());
+  const color=monthStore[key]?.meta?.[`${row}:${col}`];
+  if(color) td.style.background=color;
+  const state=monthStore[key];
+  if(state && state.calendar){const weekIdx=weekIndexForRow(row);const dayIdx=Math.floor(col/2);if(weekIdx>=0 && state.calendar[weekIdx] && !state.calendar[weekIdx][dayIdx].inMonth){td.style.background=\"#f0f0f0\";td.style.color=\"#999\";}}
+  if(weekStarts().includes(row)){td.style.background=\"#e0e0e0\";td.style.fontWeight=\"600\";}
+  if(col%2===1) td.classList.add('day-sep');
 }
 
-/* ---------------- Data ---------------- */
-function buildDataFor(y,m,weeks,br){
-  const rows = br.reduce((s,b)=>s+1+b,0);
-  return Array.from({length:rows},()=>Array(TOTAL_COLS).fill(""));
-}
-
-/* ---------------- Renderer ---------------- */
-function colorRenderer(instance, td, row, col, prop, value, cellProps){
-  Handsontable.renderers.TextRenderer.apply(this, arguments);
-
-  const key = monthKey(current.getFullYear(), current.getMonth());
-  const color = monthStore[key]?.meta?.[`${row}:${col}`];
-  if(color) td.style.background = color;
-
-  // grey out days outside target month
-  const state = monthStore[key];
-  if (state && state.calendar) {
-    const weekIdx = weekIndexForRow(row);
-    const dayIdx = Math.floor(col / 2);
-    if (weekIdx >= 0 && state.calendar[weekIdx] && !state.calendar[weekIdx][dayIdx].inMonth) {
-      td.style.background = "#f0f0f0";
-      td.style.color = "#999";
-    }
-  }
-
-  if (weekStarts().includes(row)) {
-    td.style.background = "#e0e0e0";
-    td.style.fontWeight = "600";
-  }
-  if (col % 2 === 1) td.classList.add('day-sep');
-}
-
-/* ---------------- Scheduler ---------------- */
-function weekStarts(){ let starts=[],acc=0; for(let i=0;i<bodyRows.length;i++){ starts.push(acc); acc+=1+bodyRows[i]; } return starts; }
-function weekIndexForRow(rowIdx){ const starts=weekStarts(); for(let i=0;i<bodyRows.length;i++){ if(rowIdx>=starts[i] && rowIdx<=starts[i]+bodyRows[i]) return i; } return -1; }
+/* ---------- Scheduler ---------- */
+function weekStarts(){let s=[],a=0;for(let i=0;i<bodyRows.length;i++){s.push(a);a+=1+bodyRows[i];}return s;}
+function weekIndexForRow(rowIdx){const s=weekStarts();for(let i=0;i<bodyRows.length;i++){if(rowIdx>=s[i]&&rowIdx<=s[i]+bodyRows[i])return i;}return -1;}
 
 async function renderMonth(){
-  const y = current.getFullYear(), m = current.getMonth(), key = monthKey(y,m);
-  const weeks = numWeeks(y,m);
+  const y=current.getFullYear(), m=current.getMonth(), key=monthKey(y,m);
+  const weeks=numWeeks(y,m);
 
-  // Try Firestore first
-  if (!monthStore[key]) {
-    await loadMonth(y,m);
-    // If nothing in Firestore, build a fresh blank month
-    if (!monthStore[key]) {
-      const br = Array(weeks).fill(8);
-      const data = buildDataFor(y,m,weeks,br);
-      const matrix = buildWeekMatrix(y,m,weeks);
-      const dayMeta = {};
-      let acc=0;
-      for(let w=0; w<weeks; w++){
-        for(let d=0; d<DAYS_PER_WEEK; d++){
-          const c = d * COLS_PER_DAY;
-          data[acc][c] = matrix[w][d].date.toLocaleString('default', {weekday:'short'})+" "+matrix[w][d].date.getDate();
-          dayMeta[`${acc}:${c}`] = matrix[w][d];
-        }
-        acc += 1 + br[w];
-      }
-      monthStore[key] = { data, bodyRows: br, meta: {}, dayMeta, calendar: matrix, shiftLog: [], summary: [], summaryStudy: [], summarySite: [] };
+  // Always rebuild matrix with headers
+  const br=Array(weeks).fill(8);
+  const data=buildDataFor(y,m,weeks,br);
+  const matrix=buildWeekMatrix(y,m,weeks);
+  const dayMeta={};
+  let acc=0;
+  for(let w=0;w<weeks;w++){
+    for(let d=0;d<DAYS_PER_WEEK;d++){
+      const c=d*COLS_PER_DAY;
+      data[acc][c]=matrix[w][d].toLocaleString ? matrix[w][d].date.toLocaleString('default',{weekday:'short'})+\" \"+matrix[w][d].date.getDate() : \"\";
+      dayMeta[`${acc}:${c}`]=matrix[w][d];
     }
-    // realtime subscribe
-    subscribeToMonth(y,m);
+    acc+=1+br[w];
   }
+  monthStore[key]={data,bodyRows:br,meta:{},dayMeta,calendar:matrix,shiftLog:[],summary:[],summaryStudy:[],summarySite:[]};
 
-  bodyRows = monthStore[key].bodyRows.slice();
-  document.getElementById("monthLabel").textContent = current.toLocaleString('default',{month:'long'})+" "+y;
+  // Merge from Firestore if exists
+  await loadMonth(y,m);
 
-  if (hot) hot.destroy();
-  hot = new Handsontable(document.getElementById('grid'), {
-    data: monthStore[key].data,
-    colHeaders: false,
-    rowHeaders: true,
-    columns: Array.from({length: TOTAL_COLS}, () => ({ type:'text' })),
-    licenseKey: 'non-commercial-and-evaluation',
-    contextMenu: true,
-    cells: (r,c) => { let props={renderer:colorRenderer}; if (weekStarts().includes(r)) props.readOnly = true; return props; },
-    afterSelectionEnd: (r1,c1,r2,c2)=>{ lastSel=[r1,c1,r2,c2]; },
-    afterCopy: (data, coords) => {
-      clipboardMeta = [];
-      coords.forEach(({startRow,startCol,endRow,endCol})=>{
-        for(let r=startRow;r<=endRow;r++) for(let c=startCol;c<=endCol;c++){
-          const key=monthKey(current.getFullYear(),current.getMonth());
-          const color=monthStore[key]?.meta?.[`${r}:${c}`]||null;
-          clipboardMeta.push({r:r-startRow, c:c-startCol, color});
-        }
-      });
-    },
-    afterPaste: (data, coords) => {
-      if(!clipboardMeta) return;
-      const { startRow, startCol } = coords[0];
-      const key = monthKey(current.getFullYear(), current.getMonth());
-      clipboardMeta.forEach(item=>{
-        if(item.color){
-          const rr = startRow + item.r, cc = startCol + item.c;
-          monthStore[key].meta[`${rr}:${cc}`] = item.color;
-        }
-      });
-      hot.render();
-      saveMonth(key);
-    },
-    afterChange: () => { saveMonth(key); }
+  subscribeToMonth(y,m);
+
+  bodyRows=monthStore[key].bodyRows.slice();
+  document.getElementById(\"monthLabel\").textContent=current.toLocaleString('default',{month:'long'})+\" \"+y;
+
+  if(hot) hot.destroy();
+  hot=new Handsontable(document.getElementById('grid'),{
+    data:monthStore[key].data,
+    colHeaders:false,rowHeaders:true,
+    columns:Array.from({length:TOTAL_COLS},()=>({type:'text'})),
+    licenseKey:'non-commercial-and-evaluation',
+    contextMenu:true,
+    cells:(r,c)=>{let props={renderer:colorRenderer};if(weekStarts().includes(r)) props.readOnly=true;return props;},
+    afterSelectionEnd:(r1,c1,r2,c2)=>{lastSel=[r1,c1,r2,c2];},
+    afterChange:()=>saveMonth(key)
   });
 }
-function prevMonth(){ current.setMonth(current.getMonth()-1); renderMonth(); }
-function nextMonth(){ current.setMonth(current.getMonth()+1); renderMonth(); }
+window.renderMonth=renderMonth;
+function prevMonth(){current.setMonth(current.getMonth()-1);renderMonth();}
+function nextMonth(){current.setMonth(current.getMonth()+1);renderMonth();}
+window.prevMonth=prevMonth; window.nextMonth=nextMonth;
 
-/* ---------------- Colors ---------------- */
-const colors=["#f28b82","#fbbc04","#fff475","#ccff90","#a7ffeb","#cbf0f8","#aecbfa","#d7aefb","#fdcfe8","#e6c9a8","#e8eaed","#d50000","#c51162","#aa00ff","#304ffe","#2962ff","#0091ea","#00b8d4","#00c853","#64dd17"];
-(function(){
-  const p=document.getElementById('palette');
-  colors.forEach(c=>{
-    let sw=document.createElement('div');
-    sw.className='swatch'; sw.style.background=c; sw.onclick=()=>applyColor(c); p.appendChild(sw);
-  });
-  let clr=document.createElement('div');
-  clr.className='swatch clear'; clr.textContent='×'; clr.onclick=()=>applyColor(null); p.appendChild(clr);
-})();
-function applyColor(color){
-  const sel = lastSel || hot.getSelectedLast(); if(!sel) return;
-  const [r1,c1,r2,c2] = sel;
-  const key = monthKey(current.getFullYear(), current.getMonth());
-  if (!monthStore[key].meta) monthStore[key].meta = {};
-  for (let r=Math.min(r1,r2); r<=Math.max(r1,r2); r++){
-    if (weekStarts().includes(r)) continue;
-    for (let c=Math.min(c1,c2); c<=Math.max(c1,c2); c++){
-      if (color) monthStore[key].meta[`${r}:${c}`]=color;
-      else delete monthStore[key].meta[`${r}:${c}`];
-    }
-  }
-  hot.render();
-  saveMonth(key);
-}
+/* ---------- Colors ---------- */
+const colors=[\"#f28b82\",\"#fbbc04\",\"#fff475\",\"#ccff90\",\"#a7ffeb\",\"#cbf0f8\",\"#aecbfa\",\"#d7aefb\",\"#fdcfe8\",\"#e6c9a8\",\"#e8eaed\",\"#d50000\",\"#c51162\",\"#aa00ff\",\"#304ffe\",\"#2962ff\",\"#0091ea\",\"#00b8d4\",\"#00c853\",\"#64dd17\"];
+(function(){const p=document.getElementById('palette');colors.forEach(c=>{let sw=document.createElement('div');sw.className='swatch';sw.style.background=c;sw.onclick=()=>applyColor(c);p.appendChild(sw);});let clr=document.createElement('div');clr.className='swatch clear';clr.textContent='×';clr.onclick=()=>applyColor(null);p.appendChild(clr);})();
+function applyColor(color){const sel=lastSel||hot.getSelectedLast();if(!sel)return;const [r1,c1,r2,c2]=sel;const key=monthKey(current.getFullYear(),current.getMonth());if(!monthStore[key].meta) monthStore[key].meta={};for(let r=Math.min(r1,r2);r<=Math.max(r1,r2);r++){if(weekStarts().includes(r))continue;for(let c=Math.min(c1,c2);c<=Math.max(c1,c2);c++){if(color) monthStore[key].meta[`${r}:${c}`]=color;else delete monthStore[key].meta[`${r}:${c}`];}}hot.render();saveMonth(key);}
+window.applyColor=applyColor;
 
-/* ---------------- Add/Delete Rows ---------------- */
-function shiftMeta(meta, startRow, delta){
-  const newMeta = {};
-  Object.entries(meta).forEach(([k,v])=>{
-    let [r,c] = k.split(":").map(Number);
-    if (r >= startRow) r += delta;
-    newMeta[`${r}:${c}`] = v;
-  });
-  return newMeta;
-}
-function addRows(){
-  const n = parseInt(document.getElementById('rowsToModify').value || '1', 10);
-  const sel = lastSel || hot.getSelectedLast(); if(!sel) return;
-  const w = weekIndexForRow(sel[0]); if (w<0) return;
-  const key = monthKey(current.getFullYear(), current.getMonth());
-  const start = weekStarts()[w] + 1;
-  bodyRows[w] += n; monthStore[key].bodyRows = bodyRows.slice();
-  monthStore[key].data.splice(start, 0, ...Array.from({length:n}, () => Array(TOTAL_COLS).fill("")));
-  monthStore[key].meta = shiftMeta(monthStore[key].meta, start, n);
-  renderMonth(); saveMonth(key);
-}
-function delRows(){
-  const n = parseInt(document.getElementById('rowsToModify').value || '1', 10);
-  const sel = lastSel || hot.getSelectedLast(); if(!sel) return;
-  const w = weekIndexForRow(sel[0]); if (w<0) return;
-  if (bodyRows[w] <= n) return;
-  const key = monthKey(current.getFullYear(), current.getMonth());
-  const start = weekStarts()[w] + 1;
-  bodyRows[w] -= n; monthStore[key].bodyRows = bodyRows.slice();
-  monthStore[key].data.splice(start, n);
-  monthStore[key].meta = shiftMeta(monthStore[key].meta, start, -n);
-  renderMonth(); saveMonth(key);
-}
+/* ---------- Add/Delete Rows ---------- */
+function shiftMeta(meta,startRow,delta){const newMeta={};Object.entries(meta).forEach(([k,v])=>{let[r,c]=k.split(\":\").map(Number);if(r>=startRow) r+=delta;newMeta[`${r}:${c}`]=v;});return newMeta;}
+function addRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);const sel=lastSel||hot.getSelectedLast();if(!sel)return;const w=weekIndexForRow(sel[0]);if(w<0)return;const key=monthKey(current.getFullYear(),current.getMonth());const start=weekStarts()[w]+1;bodyRows[w]+=n;monthStore[key].bodyRows=bodyRows.slice();monthStore[key].data.splice(start,0,...Array.from({length:n},()=>Array(TOTAL_COLS).fill(\"\")));monthStore[key].meta=shiftMeta(monthStore[key].meta,start,n);renderMonth();saveMonth(key);}
+function delRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);const sel=lastSel||hot.getSelectedLast();if(!sel)return;const w=weekIndexForRow(sel[0]);if(w<0)return;const key=monthKey(current.getFullYear(),current.getMonth());if(bodyRows[w]<=n)return;const start=weekStarts()[w]+1;bodyRows[w]-=n;monthStore[key].bodyRows=bodyRows.slice();monthStore[key].data.splice(start,n);monthStore[key].meta=shiftMeta(monthStore[key].meta,start,-n);renderMonth();saveMonth(key);}
+window.addRows=addRows; window.delRows=delRows;
 
-/* ---------------- Directory ---------------- */
-directoryHot = new Handsontable(document.getElementById('directory'),{
-  data:[["","",""]],
-  colHeaders:["Name","Email","Phone"],
-  rowHeaders:true,
-  minSpareRows:1,
-  contextMenu:true,
-  licenseKey:'non-commercial-and-evaluation'
-});
-function getDirectoryMap(){
-  const map = {};
-  directoryHot.getData().forEach(r=>{
-    const name=(r[0]||"").trim().toLowerCase();
-    const email=(r[1]||"").trim();
-    if (name && email) map[name] = email;
-  });
-  return map;
-}
+/* ---------- Directory ---------- */
+directoryHot=new Handsontable(document.getElementById('directory'),{data:[[\"\",\"\",\"\"]],colHeaders:[\"Name\",\"Email\",\"Phone\"],rowHeaders:true,minSpareRows:1,contextMenu:true,licenseKey:'non-commercial-and-evaluation'});
 
-/* ---------------- Process Schedule (Parse) ---------------- */
+/* ---------- Reports ---------- */
+// reuse your parseSchedule + renderReports from before
+
+renderMonth();
 function parseSchedule(y, m) {
   const key = monthKey(y, m);
   const state = monthStore[key];
