--- a/index.html
+++ b/index.html
@@ -228,20 +228,53 @@ function weekIndexForRow(rowIdx){const starts=weekStarts();for(let i=0;i<bodyRow
 async function renderMonth(){
   const y=current.getFullYear(), m=current.getMonth(), key=monthKey(y,m);
   const weeks=numWeeks(y,m);
+
   if(!monthStore[key]){
-    const br=Array(weeks).fill(8);
-    const data=buildDataFor(y,m,weeks,br);
-    const matrix=buildWeekMatrix(y,m,weeks);
-    const dayMeta={};
-    let acc=0;
-    for(let w=0;w<weeks;w++){
-      for(let d=0;d<DAYS_PER_WEEK;d++){
-        const c=d*COLS_PER_DAY;
-        data[acc][c]=matrix[w][d].date.toLocaleString('default',{weekday:'short'})+" "+matrix[w][d].date.getDate();
-        dayMeta[`${acc}:${c}`]=matrix[w][d];
-      }
-      acc+=1+br[w];
+    // ... your existing blank build logic ...
+    monthStore[key]={data,bodyRows:br,meta:{},dayMeta,calendar:matrix,
+                     shiftLog:[],summary:[],summaryStudy:[],summarySite:[]};
+
+    // 🔹 Try merging Firestore
+    const found = await loadMonthFromFirebase(y,m);
+    // 🔹 If Firestore data exists, refresh bodyRows too
+    if(found){
+      bodyRows = monthStore[key].bodyRows.slice();
     }
+    // 🔹 Subscribe for realtime updates
+    subscribeMonthRealtime(y,m);
+  }
+
+  bodyRows=monthStore[key].bodyRows.slice();
+  document.getElementById("monthLabel").textContent=
+     current.toLocaleString('default',{month:'long'})+" "+y;
+
+  if(hot) hot.destroy();
+  hot=new Handsontable(document.getElementById('grid'),{
+    data:monthStore[key].data,  // 🔹 Always use possibly-loaded data
+    colHeaders:false,rowHeaders:true,
+    columns:Array.from({length:TOTAL_COLS},()=>({type:'text'})),
+    licenseKey:'non-commercial-and-evaluation',
+    contextMenu:true,
+    cells:(r,c)=>{let props={renderer:colorRenderer};
+                  if(weekStarts().includes(r)) props.readOnly=true; return props;},
+    afterSelectionEnd:(r1,c1,r2,c2)=>{lastSel=[r1,c1,r2,c2];},
+    afterCopy:(data,coords)=>{clipboardMeta=[];coords.forEach(({startRow,startCol,endRow,endCol})=>{
+      for(let r=startRow;r<=endRow;r++)for(let c=startCol;c<=endCol;c++){
+        const key=monthKey(current.getFullYear(),current.getMonth());
+        const color=monthStore[key]?.meta?.[`${r}:${c}`]||null;
+        clipboardMeta.push({r:r-startRow,c:c-startCol,color});
+      }});},
+    afterPaste:(data,coords)=>{if(!clipboardMeta)return;
+      const {startRow,startCol}=coords[0];const key=monthKey(current.getFullYear(),current.getMonth());
+      clipboardMeta.forEach(item=>{
+        if(item.color){
+          const rr=startRow+item.r,cc=startCol+item.c;
+          monthStore[key].meta[`${rr}:${cc}`]=item.color;
+        }});
+      hot.render(); saveMonthToFirebase(key);},
+    afterChange:()=>{ saveMonthToFirebase(key); }
+  });
+}
     monthStore[key]={data,bodyRows:br,meta:{},dayMeta,calendar:matrix,shiftLog:[],summary:[],summaryStudy:[],summarySite:[]};
 
     // Try merging an existing month from Firestore; if none, we keep this blank one.
